<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">KIDUP </string>
    <string name="title_activity_kid_setting">kid_setting</string>
    <!-- MainActivity.java -->
    <string name="sensor_not_found">Sensor not found</string>
    <string name="toast_successful_convert_step_to_time">You have received: </string>
    <string name="steps">steps</string>
    <string name="seconds">seconds</string>
    <!-- activity_main.xml -->
    <string name="last_update">Last update: Now</string>
    <string name="your_screentime">Your screentime</string>
    <string name="tap_this">Tap this</string>
    <string name="convert_activity">Convert activity into screentime</string>
    <string name="tasks_remaining">Tasks remaining"</string>
    <string name="activity">Activity</string>
    <string name="daily_total">Daily target: 6600</string>
    <string name="total_today">Total today: </string>
    <string name="activity_level">Activity level</string>
    <!-- content_kid_setting.xml -->
    <string name="input_password">Input the password here!</string>
    <string name="button_submit">Submit</string>
    <string name="description">Description about feature</string>
    <!-- list_task.xml -->
    <string name="button_gettime">Transfer steps to time</string>
    <!-- Lock_screen.xml -->
    <string name="button_unlock">Unlock</string>
    <string name="screentime_left">Screentime left:</string>
    <!-- Task.xml -->
    <string name="register">Register</string>
    <!-- activity_developer_mode.xml -->
    <string name="switch_enable_lock">Lockscreen off/on</string>
    <string name="change_kid_id">Change the Kid id</string>
    <!-- dialog_thankyou.xml -->
    <string name="dialog_thankyou">Thank you for participating in our open beta.</string>
    <string name="dialog_questions">If you have any feedback about our application please email us at dev.kidup@gmail.com</string>
    <string name="dialog_thanks_oamk">We would not be here without the awesome support from OAMK labs.</string>
    <string name="dialog_instructions">To activate lockscreen go to kidup kid version in Playstore to find out instructions</string>
    <string name="dialog_thanks_big">Special thanks to:</string>
    <string name="dialog_blair">Blair,</string>
    <string name="dialog_kp">KP,</string>
    <string name="dialog_janne">Janne,</string>
    <string name="dialog_ulla">Ulla-Maija</string>
    <string name="dialog_thanks_names">Blair, Kari-Pekka, Janne, Ulla-Maija</string>
    <string name="dialog_our_name">KIDUP team: Tung, Mika, Michelle, Klaudia, Tuomo, Armando, Hristijan</string>
    <!-- CountDownService.java -->
    <string name="notification_hey">Hey you!</string>
    <string name="notification_you">You have less than 5 minutes left!</string>
    <!-- DeveloperMode.java -->
    <string name="toast_disable">Lockscreen is now disabled, please shutdown application fully to save settings</string>
    <string name="toast_enable">Lockscreen is now enabled, please shutdown application fully to save settings</string>
    <string name="toast_wrong">Wrong id for kid</string>
    <string name="alert_title">Save settings</string>
</resources>
